# binance_orders

./: .env  Makefile  README.md  manage.py  pyproject.toml  pytest.ini
binance_orders/: asgi.py  settings.py  urls.py  wsgi.py
orders/: serializers.py  urls.py  views.py
tests/: conftest.py  test_orders.py
